# Daimon

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  daimon.mcp.example.json  pyproject.toml
config/: exclusions.example.yaml  motor.example.yaml  overlay.example.yaml  update.example.yaml
design/: index.html
docs/: RELEASE.md  cadrage-axes-travail-2026-06-19.md  delegation-haiku-via-profil.md  delegation-via-profil.md
docs/superpowers/plans/: 2026-06-12-organe-moteur-mains.md  2026-06-12-phase0a-quick-wins.md  2026-06-12-phase0b-hardening.md  2026-06-13-phase1-overlay.md  2026-06-13-phase2-setup.md  2026-06-13-tray-control-surface.md  2026-06-20-axe4b-window-control-must-delegate.md  2026-06-20-axe7-cross-platform-release.md  2026-06-20-delegation-active-agnostique.md  2026-06-20-delegation-grade-authorization.md  2026-06-20-webview-face-ui-layer.md  2026-06-23-pacte-cooperative-app-channel.md  2026-06-24-pacte-delta-facilitators-v1.1.md
docs/superpowers/specs/: 2026-06-12-organe-moteur-mains-design.md  2026-06-12-phase0-fondation-design.md  2026-06-12-phase0-foundation-design.md  2026-06-12-v1-mvp-charter.md  2026-06-13-phase1-overlay-design.md  2026-06-13-phase2-install-onboarding-design.md  2026-06-13-phase3-packaging-design.md  2026-06-13-tray-control-surface-design.md  2026-06-15-v2-windows-port-design.md  2026-06-17-auto-update-design.md  2026-06-20-axe4b-window-control-must-delegate-design.md  2026-06-20-delegation-active-agnostique-design.md  2026-06-20-delegation-grade-authorization-design.md  2026-06-20-webview-face-ui-layer-design.md  2026-06-23-pacte-cooperative-app-channel-design.md  2026-06-23-pacte-delta-endpoint-contract.md  2026-06-24-pacte-delta-facilitators-v1.1.md
scripts/: diag_frontmost.py  smoke_face_win.py  smoke_gate_win.py  smoke_mcp.py  smoke_motor.py  smoke_motor_win.py  smoke_overlay.py  smoke_overlay_win.py  smoke_setup.py  smoke_setup_win.py
src/daimon/: __init__.py  __main__.py  applog.py  config.py  exclusions.py  objc_bridge.py  onboard.py  server.py  userdata.py
src/daimon/backends/: __init__.py
src/daimon/capture/: __init__.py  accessibility.py  accessibility_win.py  coordspace.py  display_identity_win.py  screen.py  screen_win.py  treeshape.py
src/daimon/face/: __init__.py  __main__.py  bridge.py  host.py  native.py  native_win.py  tray.py  view_model.py
src/daimon/face/platform/: __init__.py  macos.py  noop.py  windows.py
src/daimon/face/web/: package-lock.json  package.json
src/daimon/face/web/src/: base.css  bridge.js
src/daimon/face/web/src/lib/: marks.jsx  menu.jsx
src/daimon/face/web/src/onboarding/: index.jsx
src/daimon/face/web/src/overlay/: index.jsx
src/daimon/motor/: __init__.py  _filelock.py  actions.py  actuator.py  actuator_win.py  audit.py  consent.py  control.py  factory.py  focus.py  gate.py  gate_win.py  guard.py  keys.py  keys_win.py  organ.py  probe.py  prober_win.py  reversibility.py  types.py  watchdog.py
src/daimon/overlay/: __init__.py  client.py  client_win.py  launcher.py  launcher_win.py  presenter.py  protocol.py  theme.py  transport_win.py
src/daimon/overlay/app/: __init__.py  __main__.py  _win_main.py  scene.py  scene_win.py  server.py  window.py  window_win.py
src/daimon/pacte/: actuator.py  client.py  discovery.py  expect.py  factory.py  gate.py  organ.py  protocol.py  session.py
src/daimon/senses/: __init__.py  base.py  calibration.py  calibration_store.py  delegation.py  find.py  find_ocr.py  touche.py  vue.py
src/daimon/setup/: __init__.py  cli.py  deploy.py  invocation.py  onboard_flow.py  permissions.py  wizard.py
src/daimon/setup/clients/: __init__.py  base.py  registry.py
src/daimon/setup/gui/: __init__.py  __main__.py  layout.py  window.py  window_win.py
src/daimon/tray/: __init__.py  actions.py  actions_impl.py  menu_model.py  settings.py  state.py
src/daimon/tray/app/: __init__.py  __main__.py  statusitem.py  statusitem_win.py
src/daimon/update/: __init__.py  apply.py  apply_macos.py  apply_win.py  core.py  download.py  service.py  source.py
tests/: test_accessibility_shape.py  test_accessibility_win.py  test_calibration.py  test_calibration_store.py  test_calibration_tools.py  test_client_permissions.py  test_coordspace.py  test_coordspace_tools.py  test_delegation.py  test_deploy.py  test_drag_classification.py  test_exclusions.py  test_face_bridge.py  test_face_bundle.py  test_face_host.py  test_face_platform.py  test_face_platform_win.py  test_face_view_model.py  test_find.py  test_find_ocr.py  test_find_tool.py  test_guard_motor_exclusions.py  test_guard_observed.py  test_keys_win.py  test_ledger_durability.py  test_main_dispatch.py  test_make_manifest.py  test_motor_actions.py  test_motor_actuator.py  test_motor_actuator_win.py  test_motor_audit.py  test_motor_config.py  test_motor_consent.py  test_motor_control.py  test_motor_focus.py  test_motor_focus_tools.py  test_motor_gate.py  test_motor_guard.py  test_motor_keys.py  test_motor_keys_actions.py  (+65 more)
tests/fakes/: cooperative_endpoint.py
(+1 files in other folders)
