[project]
name = "daimon"
version = "0.0.3"
description = "Daimon — a local sensory organ on macOS. Exposes screen perception (Vue, Touché) to any AI client over MCP. Agnostic by design; it never calls an AI itself."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Ben" }]
dependencies = [
    "mcp>=1.2.0",          # Model Context Protocol server SDK (FastMCP)
    "Pillow>=10.0",        # image encode/downscale for Vue snapshots
    "PyYAML>=6.0",         # exclusion-zone config
    # --- macOS backends (Vue/Touché/Mains via pyobjc) ---
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    # --- Windows backends ---
    "pywin32>=306; sys_platform == 'win32'",          # foreground window, displays
    "windows-capture>=1.4; sys_platform == 'win32'",  # WGC screen capture (Vue)
    "comtypes>=1.4; sys_platform == 'win32'",         # UIA COM bindings
    "uiautomation>=2.0; sys_platform == 'win32'",     # UIA tree (Touché)
    "PySide6>=6.7; sys_platform == 'win32'",          # overlay + onboarding GUI (the face)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
build = ["pyinstaller>=6.10"]   # macOS .app/DMG packaging (build/daimon.spec)

[project.scripts]
daimon = "daimon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daimon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
