[project]
name = "daimon"
version = "0.0.10"
description = "Daimon — a local sensory organ on macOS. Exposes screen perception (Vue, Touché) to any AI client over MCP. Agnostic by design; it never calls an AI itself."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Ben" }]
dependencies = [
    "mcp>=1.2.0",          # Model Context Protocol server SDK (FastMCP)
    "pyobjc-framework-Quartz>=10.0",        # screen capture + display geometry
    "pyobjc-framework-ApplicationServices>=10.0",  # Accessibility API (Touché)
    "pyobjc-framework-Vision>=10.0",        # on-device OCR for vue_find (AXE 3 locator)
    "Pillow>=10.0",        # image encode/downscale for Vue snapshots
    "PyYAML>=6.0",         # exclusion-zone config
    "pywebview>=5.0",      # the face UI layer — system webview (WKWebView) host
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
build = ["pyinstaller>=6.10"]   # macOS .app/DMG packaging (build/daimon.spec)

[project.scripts]
daimon = "daimon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daimon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
